<resources>
    <string name="app_name">QuizzApp</string>
    <string name="offline">Offline :</string>
    <string name="vsIA">1 vs IA</string>
    <string name="vsOne">1 vs 1</string>
    <string name="vsTeams">Team A vs Team B</string>
    <string name="online">Online :</string>
    <string name="vsOneOneline">1 vs 1 Online</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="horse">Horse</string>
    <string name="cow">Cow</string>
    <string name="value">Value: 5 pts</string>
    <string name="question">Which animal is it ?</string>
    <string name="play">Play</string>
    <string name="team">Team: B</string>
    <string name="player">Player: Mel</string>
    <string name="life">Life(s): 3</string>
    <string name="score">Score: 18</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
