<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/fragment2"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.epulapp.quizzandroid.quizzFragment">

<android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline4"
    app:layout_constraintGuide_begin="95dp"
    android:orientation="horizontal"
    tools:layout_editor_absoluteY="95dp"
    tools:layout_editor_absoluteX="0dp" />

<android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline5"
    app:layout_constraintGuide_begin="20dp"
    android:orientation="horizontal"
    tools:layout_editor_absoluteY="20dp"
    tools:layout_editor_absoluteX="0dp" />

<android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline6"
    app:layout_constraintGuide_begin="365dp"
    android:orientation="horizontal"
    tools:layout_editor_absoluteY="365dp"
    tools:layout_editor_absoluteX="0dp" />

<android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline7"
    app:layout_constraintGuide_begin="433dp"
    android:orientation="horizontal"
    tools:layout_editor_absoluteY="433dp"
    tools:layout_editor_absoluteX="0dp" />

<android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline8"
    app:layout_constraintGuide_percent="0.5"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="296dp" />

<Button
    android:id="@+id/button5"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="@color/colorPrimary"
    android:text="@string/cat"
    app:layout_constraintBottom_toTopOf="@+id/guideline7"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/guideline8"
    app:layout_constraintTop_toTopOf="@+id/guideline6"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<Button
    android:id="@+id/button6"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="@color/colorPrimary"
    android:text="@string/dog"
    app:layout_constraintBottom_toTopOf="@+id/guideline7"
    app:layout_constraintLeft_toLeftOf="@+id/guideline8"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline6"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<Button
    android:id="@+id/button7"
    android:layout_width="0dp"
    android:layout_height="48dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="@color/colorPrimary"
    android:text="@string/cow"
    app:layout_constraintBottom_toTopOf="@+id/guideline12"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/guideline8"
    app:layout_constraintTop_toTopOf="@+id/guideline7"
    app:layout_constraintVertical_bias="0.0"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<Button
    android:id="@+id/button8"
    android:layout_width="0dp"
    android:layout_height="48dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="@color/colorPrimary"
    android:text="@string/horse"
    app:layout_constraintBottom_toTopOf="@+id/guideline12"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="@+id/guideline8"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline7"
    app:layout_constraintVertical_bias="0.0"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<ProgressBar
    android:id="@+id/progressBar"
    style="?android:attr/progressBarStyleHorizontal"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="6dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline9"
    app:layout_constraintHorizontal_bias="0.0"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline9"
    app:layout_constraintGuide_begin="332dp"
    android:orientation="horizontal"
    tools:layout_editor_absoluteY="332dp"
    tools:layout_editor_absoluteX="0dp" />

<android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline10"
    app:layout_constraintGuide_begin="58dp"
    android:orientation="horizontal"
    tools:layout_editor_absoluteY="58dp"
    tools:layout_editor_absoluteX="0dp" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/team"
    app:layout_constraintBottom_toTopOf="@+id/guideline10"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline5"
    android:layout_marginStart="8dp" />

<TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:text="@string/player"
    app:layout_constraintBottom_toTopOf="@+id/guideline4"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline10"
    android:layout_marginStart="8dp" />

<TextView
    android:id="@+id/textView5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/life"
    app:layout_constraintBottom_toTopOf="@+id/guideline10"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline5"
    android:layout_marginEnd="8dp" />

<TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/score"
    app:layout_constraintBottom_toTopOf="@+id/guideline4"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline10"
    android:layout_marginEnd="8dp" />

<TextView
    android:id="@+id/textView7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/question"
    android:textAppearance="@style/TextAppearance.AppCompat.Button"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@+id/guideline11"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<Button
    android:id="@+id/button9"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="32dp"
    android:text="@string/play"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView7"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<TextView
    android:id="@+id/textView8"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="32dp"
    android:text="@string/value"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button9"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp" />

<android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline11"
    app:layout_constraintGuide_begin="135dp"
    android:orientation="horizontal"
    tools:layout_editor_absoluteY="135dp"
    tools:layout_editor_absoluteX="0dp" />

<android.support.constraint.Guideline
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/guideline12"
    app:layout_constraintGuide_begin="503dp"
    android:orientation="horizontal"
    tools:layout_editor_absoluteY="503dp"
    tools:layout_editor_absoluteX="0dp" />
</android.support.constraint.ConstraintLayout>
